--- a/description.ipynb
+++ b/description.ipynb
@@ -101,7 +101,7 @@
     {
      "data": {
       "text/plain": [
-       "[2, 20, 24, 27, 39, 44, 47]"
+       "[5, 16, 23, 26, 28, 31, 39]"
       ]
      },
      "execution_count": 4,
@@ -181,9 +181,9 @@
    "metadata": {},
    "source": [
     "## Solver algorithm\n",
-    "The algorithm works by casting the tiling problem as an [exact cover problem](https://en.wikipedia.org/wiki/Exact_cover), and then calling a [python package](https://github.com/jwg4/exact_cover) which solves such problems.\n",
+    "The solver works by casting the tiling problem as an [exact cover problem](https://en.wikipedia.org/wiki/Exact_cover), and then calling a [python package](https://github.com/jwg4/exact_cover) which solves such problems.\n",
     "\n",
-    "Internally the triangles on the board and of pieces are described using [triangular grid coordinates](https://www.boristhebrave.com/2021/05/23/triangle-grids/) where each triangle is referred to by triplet of three integers. The code first works out every possible position and orientation each individual piece can be placed on the board. It then constructs the incidence matrix, which is a matrix of 1s and 0s. Each row of the matrix correponds to placing a particular piece in a particular orientation and particular position on the board. The first 41 columns of the matrix represent the 41 free triangles on the board; a 1 in a particular column means the piece covers that triangle on the board. The final 11 (no-star game) or 10 (star game) columns represent the pieces, a 1 in that column means that particular piece is used. "
+    "Internally the triangles of the board and pieces are described using [triangular grid coordinates](https://www.boristhebrave.com/2021/05/23/triangle-grids/) where each triangle is referred to by triplet of three integers. The code first works out every possible position and orientation each individual piece can be placed on the board. It then constructs the incidence matrix, which is a matrix of 1s and 0s. Each row of the matrix corresponds to placing a particular piece in a particular orientation and particular position on the board. The first 41 columns of the matrix represent the 41 free triangles on the board; a 1 in a particular column means the piece covers that triangle on the board. The final 11 (no-star game) or 10 (star game) columns represent the individual pieces, a 1 in that column means that particular piece is used."
    ]
   },
   {
