Tweak counting example.

--- a/description.ipynb
+++ b/description.ipynb
@@ -97,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "[2, 13, 19, 26, 27, 39, 48]"
+       "[4, 10, 15, 22, 23, 28, 37]"
       ]
      },
      "execution_count": 4,
@@ -249,17 +249,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Star solutions: 13\n",
-      "No star solutions: 23064\n"
+      "Star solutions: 42\n",
+      "All solutions: 26914\n"
      ]
     }
    ],
    "source": [
-    "roll = [1, 2, 12, 22, 27, 28, 47]\n",
+    "roll = [1, 7, 10, 12, 21, 22, 25]\n",
     "game_star = Game(roll, star = True)\n",
     "game_nostar = Game(roll, star = False)\n",
     "print(f\"Star solutions: {game_star.n_solutions()}\")\n",
-    "print(f\"No star solutions: {game_nostar.n_solutions()}\")"
+    "print(f\"All solutions: {game_nostar.n_solutions()}\")"
    ]
   },
   {
